--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
  <!DOCTYPE html>
  <html>
    <head>
+     <meta name="google-site-verification" content="OpOPCOLB3FE4KP_JGqgCauSCwRY1rH2DAL36kn-eyZc" />
      <title>FuckTheBox</title>
    </head>
    <body>
